--- a/public/admin/overview/overview.css
+++ b/public/admin/overview/overview.css
@@ -102,11 +102,12 @@ input[type="number"] {
     width: 100%;
     height: 100%;
     position: fixed;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     background: #f9f9f9;
-    z-index: 20;
+    z-index: 30;
+
     transition: opacity 0.75s, visibility 0.75s;
 }
 
@@ -157,7 +158,7 @@ input[type="number"] {
     border-radius: 10px;
     width: 100%;
     position: relative;
-    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.05);
 }
 
 
@@ -329,7 +330,7 @@ input[type="number"] {
     grid-auto-rows: auto;
     column-gap: 20px;
     row-gap: 30px;
-    padding: 5px 40px;
+    padding: 5px 10px;
     align-items: start;
     justify-items: center;
 }
@@ -355,7 +356,7 @@ input[type="number"] {
 
 @media (max-width: 600px) {
     .grid-chart {
-        grid-template-columns: auto-fit (300px 1fr); /* Multi-column layout for larger screens */
+        grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
     }
 
     .grid-span-col-2-3 {
