--- a/public/admin/schedule-service/schedule-service.css
+++ b/public/admin/schedule-service/schedule-service.css
@@ -48,6 +48,8 @@
     justify-content: center;
     border-radius: 50%;
     transition: 200ms;
+    opacity: 1;
+    z-index: 1;
     border: none;
     position: relative;
     background: var(--secondary-color);
@@ -376,7 +378,7 @@ tr.skeleton::before {
 
 @media (max-width: 768px) {
     :root{
-        --default-padding: 30px 10px 0px 30px;
+        --default-padding: 30px 10px 0px 10px;
     }
     .meeting-form-container {
         right: 120px;
@@ -411,12 +413,11 @@ tr.skeleton::before {
         bottom: 65px;
         right: 60px;
         width: 75%;
-        max-height: 400px;  
     }
     .button-container {
         bottom: 0;
         right: 15px;
-        padding: 0px 20px 10px 0px;
+        padding: 0px 20px 30px 0px;
     }
 
     /* WATCH TEMPLATE STYLES */
